tests/nested_if_error.c.t.exp
Traceback (most recent call last):
  File "nested_if_error.c.py", line 24, in <module>
    if error:
NameError: name 'error' is not defined
