tests/nested_if_error.c.t
@ if True:
@  if error:
"This is not in the output"
@  end
@ end
